[tool.poetry]
name = "cipher_jer2240"
version = "0.1.0"
description = "Tool to encrypt and decrypt Caeser cipher"
authors = ["Jackson Rudoff"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
